--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,68 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
+
+
 body {
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Helvetica, sans-serif;
     background-image: url(images/preview_2.png);
     background-size: cover;
     color: aliceblue;
+    min-height: 100vh;
+}
+
+header {
+    width: 100vw;
+    height: 5vh;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 5px inset black;
+}
+
+header > p {
+    padding: 10px;
+    color: black;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.1px;
 }
 
 main {
+    font-weight: bolder;
+}
+
+.counter-app {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    font-weight: bolder;
-}
-
-div {
-    width: 100vw;
-    height: 30vh;
+    min-height: 100%;
+    margin: 90px 0;
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 4.5rem;
     margin-bottom: 5px;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 4rem;
     margin-top: 0;
     margin-bottom: 15px;
 }
 
 p {
-    padding-top: 10px;
+    padding: 10px;
 }
+
+
 
 button {
     border: none;
@@ -51,26 +78,66 @@ button {
 }
 
 #save-btn {
-    background: rgb(255, 106, 0);
+    background: rgb(178, 245, 77);
 }
 
 #decrease-btn {
     background: rgb(226, 226, 226);
 }
+
+#removeAll-btn {
+    background-color: rgb(255, 49, 49);
+}
     
 
-#increment-btn:hover {
-    background: black;
+#increment-btn:hover, #decrease-btn:hover, #save-btn:hover, #removeAll-btn:hover  {
+    background: transparent;
     color: aliceblue;
+    text-shadow: 0px 0px 10px whitesmoke;
+    font-style: italic;
+    animation: shake 1s infinite;
 }
 
-#decrease-btn:hover {
-    background: black;
-    color: aliceblue;
+footer {
+    font-size: 14px;
+    margin-top: auto;
+    width: 100vw;
+    height: 5vh;
+    background-color: aqua;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 0 5px inset black;
 }
 
-#save-btn:hover {
-    background: black;
-    color: aliceblue;
+footer > p {
+    color: black;
 }
+
+footer > a {
+    padding: 10px;
+}
+
+footer > a:hover { 
+    animation: tilt-shaking 1s infinite;
+}
+
+@keyframes tilt-shaking {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(90deg); }
+    50% { transform: rotate(135deg); }
+    75% { transform: rotate(180deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes shake {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(4deg); }
+    50% { transform: rotate(0deg); }
+    75% { transform: rotate(-4deg); }
+    100% { transform: rotate(0deg); }
+}
+
+
+
 
