--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,21 @@
 
 
 body {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
     margin: 0;
     font-family: Roboto, Helvetica, sans-serif;
-    background-image: url(images/preview_2.png);
+    background-image: url(images/Dark\ -\ Blue\ 2.jpg);
     background-size: cover;
     color: aliceblue;
     min-height: 100vh;
+    position: relative;
+    box-sizing: border-box;
 }
 
 header {
     width: 100vw;
     height: 5vh;
-    background-color: aqua;
+    background-color: rgb(236, 236, 246);
+    filter: opacity(25%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,18 +34,24 @@ header > p {
 
 main {
     font-weight: bolder;
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;;
 }
 
-.counter-app {
+.counter-container {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     min-height: 100%;
-    margin: 90px 0;
 }
 
 h1 {
+
     font-size: 4.5rem;
     margin-bottom: 5px;
     text-transform: uppercase;
@@ -62,40 +68,64 @@ p {
     padding: 10px;
 }
 
+.save-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+}
 
+#save-el {
+    max-width: 50%;
+    min-width: 75%;
+    max-height: 50%;
+    min-height: 50%;
+    overflow: scroll;
+}
+
+#count-el {
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 15px;
+    width: 20vw;
+}
 
 button {
     border: none;
     padding: 10px;
     margin: 10px auto;
     width: 100px;
+    height: 50px;
     font-weight: 800;
     border-radius: 5px;
+    color: whitesmoke;
 }
 
 #increment-btn {
-    background: aquamarine;
+    background: rgb(49, 155, 0);
+}
+
+#decrement-btn {
+    background: rgb(145, 40, 140);
 }
 
 #save-btn {
-    background: rgb(178, 245, 77);
+    background: rgb(31, 11, 162);
 }
 
-#decrease-btn {
-    background: rgb(226, 226, 226);
-}
 
-#removeAll-btn {
+#clearAll-btn {
     background-color: rgb(255, 49, 49);
 }
     
 
-#increment-btn:hover, #decrease-btn:hover, #save-btn:hover, #removeAll-btn:hover  {
-    background: transparent;
+#increment-btn:hover, #decrement-btn:hover, #save-btn:hover, #clearAll-btn:hover  {
     color: aliceblue;
     text-shadow: 0px 0px 10px whitesmoke;
     font-style: italic;
     animation: shake 1s infinite;
+    box-shadow: inset 0 0 5px white;
 }
 
 footer {
@@ -103,15 +133,18 @@ footer {
     margin-top: auto;
     width: 100vw;
     height: 5vh;
-    background-color: aqua;
+    background-color: rgb(236, 236, 246);
+    filter: opacity(35%);
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 0 5px inset black;
+    position: absolute;
+    bottom: 0;
 }
 
 footer > p {
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 footer > a {
