--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
+*, *::after, *::before {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
+    padding: 0;
     font-family: Roboto, Helvetica, sans-serif;
     background-image: url(images/Dark\ -\ Blue\ 2.jpg);
     background-size: cover;
     color: aliceblue;
     min-height: 100vh;
     position: relative;
-    box-sizing: border-box;
 }
 
 header {
@@ -47,7 +50,7 @@ main {
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 100dvh;
 }
 
 h1 {
@@ -73,15 +76,11 @@ p {
     justify-content: center;
     align-items: center;
     width: 200px;
-    height: 50px;
+    height: auto;
 }
 
 #save-el {
-    max-width: 50%;
-    min-width: 75%;
-    max-height: 50%;
-    min-height: 50%;
-    overflow: scroll;
+    margin-top: 1em;
 }
 
 #count-el {
@@ -130,9 +129,8 @@ button {
 
 footer {
     font-size: 14px;
-    margin-top: auto;
     width: 100vw;
-    height: 5vh;
+    height: 50px;
     background-color: rgb(236, 236, 246);
     filter: opacity(35%);
     display: flex;
@@ -148,11 +146,7 @@ footer > p {
 }
 
 footer > a {
-    padding: 10px;
-}
-
-footer > a:hover { 
-    animation: tilt-shaking 1s infinite;
+    padding-right: 10px;
 }
 
 @keyframes tilt-shaking {
