--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 5vh;
     background-color: rgb(236, 236, 246);
     filter: opacity(25%);
@@ -67,9 +67,6 @@ h2 {
     margin-bottom: 15px;
 }
 
-p {
-    padding: 10px;
-}
 
 .save-container {
     display: flex;
@@ -90,14 +87,19 @@ p {
     width: 20vw;
 }
 
+.button-container {
+    width: 700px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
 button {
     border: none;
-    padding: 10px;
-    margin: 10px auto;
+    margin: 10px 0;
     width: 100px;
     height: 50px;
     font-weight: 800;
-    border-radius: 5px;
+    border-radius: 15px;
     color: whitesmoke;
 }
 
@@ -129,7 +131,7 @@ button {
 
 footer {
     font-size: 14px;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     background-color: rgb(236, 236, 246);
     filter: opacity(35%);
@@ -137,8 +139,6 @@ footer {
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 0 5px inset black;
-    position: absolute;
-    bottom: 0;
 }
 
 footer > p {
